kubernetes/devops.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
spec:
  selector:
    app: devops
  ports:
    - port: 80
      targetPort: 8081
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-deployment
spec:
  selector:
    matchLabels:
      app: devops
  replicas: 1
  template:
    metadata:
      labels:
        app: devops
    spec:
      containers:
      - name: devops-con
        image: gautammandlik/devops:latest
        ports:
        - containerPort: 8081
