kubernetes/it.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-service
spec:
  selector:
    app: it
  ports:
    - port: 80
      targetPort: 8082
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-deployment
spec:
  selector:
    matchLabels:
      app: it
  replicas: 1
  template:
    metadata:
      labels:
        app: it
    spec:
      containers:
      - name: it-con
        image: gautammandlik/it:latest
        ports:
        - containerPort: 8082
