kubernetes/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules: 
  - http:
      paths:
      - path: /developer
        backend:
          serviceName: developer-service
          servicePort: 8080
      - path: /devops
        backend:
          serviceName: devops-service
          servicePort: 8081
      - path: /it
        backend:
          serviceName: it-service
          servicePort: 8082
