kubernetes/developer.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: developer-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /developer
          backend:
            serviceName: developer-service
            servicePort: 8080
        - path: /developer
          backend:
            serviceName: developer-service
            servicePort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: developer-service
  labels:
    app: developer
spec:
  type: NodePort
  selector:
    app: developer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: developer-deployment
spec:
  spec:
  selector:
    matchLabels:
      app: developer
  replicas: 1
  template:
    metadata:
      labels:
        app: developer
    spec:
      containers:
      - name: developer-con
        image: thetips4you/stockmanager:latest
        ports:
        - containerPort: 8080
